Bug 411797 - [xmpp] org.eclipse.ecf.core.ContainerConnectException: Login attempt failed with ejabberd server https://bugs.eclipse.org/411797